--- a/SimTetragonal2/1/big.in
+++ b/SimTetragonal2/1/big.in
@@ -1,5 +1,5 @@
 # Simulation parameters
-N=15
+N=8
 Nthermal=10000
 # Higher Nthermal produces less noise in final results, try higher than 30k (100k is noiseless, 10k is noisy)
 Nmeasure=1000
@@ -12,8 +12,8 @@ Nsample=10
 # Physical parameters
 temperature=0.5
 J=1
-# Jz = ds
-ds=0.1
+Jz=0.1
+Jxy=1
 kb=1
 H=(0 0 1)
 
